@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The Movie Database"
-       version="3.9.2"
+       version="3.9.3"
        provider-name="Team Kodi">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
-    <import addon="metadata.common.imdb.com" version="2.7.8"/>
-    <import addon="metadata.common.themoviedb.org" version="2.13.1"/>
+    <import addon="metadata.common.imdb.com" version="2.8.8"/>
+    <import addon="metadata.common.themoviedb.org" version="2.15.0"/>
     <import addon="plugin.video.youtube" version="4.4.10" optional="true"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
@@ -120,5 +120,7 @@
     <website></website>
     <email></email>
     <source></source>
+	<news>v3.9.3
+- Added uniqueids and ratings with their name - needs Krypton or newer</news>
   </extension>
 </addon>
