@@ -35,11 +35,14 @@
 	</GetSearchResults>
 	<GetDetails dest="3">
 		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="&lt;id&gt;\1&lt;/id&gt;" dest="5">
-				<expression noclean="1">&quot;id&quot;:([0-9]*),&quot;imdb</expression>
+			<RegExp input="$$1" output="&lt;id&gt;$$2&lt;/id&gt;&lt;uniqueid type=&quot;themoviedb&quot; default=&quot;true&quot;&gt;$$2&lt;/uniqueid&gt;" dest="5">
+				<expression/>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;id&gt;\1&lt;/id&gt;" dest="5+">
+			<RegExp input="$$1" output="\1" dest="11">
 				<expression clear="yes" noclean="1">&quot;id&quot;:[0-9]*,&quot;imdb_id&quot;:&quot;([^&quot;]*)</expression>
+			</RegExp>
+			<RegExp input="$$11" output="&lt;id&gt;\1&lt;/id&gt;&lt;uniqueid type=&quot;imdb&quot;&gt;\1&lt;/uniqueid&gt;" dest="5+">
+				<expression>(.+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="9">
 				<expression fixchars="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
@@ -68,13 +71,19 @@
 			<RegExp input="$$10" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
 				<expression>(.+)</expression>
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="&lt;chain function=&quot;GetIMDBRatingById&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
-				<RegExp input="$$1" output="\1" dest="6">
-					<expression noclean="1">&quot;id&quot;:[0-9]*,&quot;imdb_id&quot;:&quot;([^&quot;]*)</expression>
+			<RegExp input="$INFO[RatingS]" output="$$6" dest="5+">
+				<RegExp input="$$11" output="&lt;chain function=&quot;GetIMDBRatingsByIdAsDef&quot;&gt;\1&lt;/chain&gt;" dest="6">
+					<expression>(.+)</expression>
+				</RegExp>
+				<RegExp input="" output="&lt;chain function=&quot;GetTMDBRatingsByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="6+">
+					<expression/>
 				</RegExp>
 				<expression>IMDb</expression>
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="&lt;chain function=&quot;GetTMDBRatingByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+			<RegExp input="$INFO[RatingS]" output="&lt;chain function=&quot;GetTMDBRatingsByIdAsDefChain&quot;&gt;$$2&lt;/chain&gt;$$7" dest="5+">
+				<RegExp input="$11" conditional="imdbanyway" output="&lt;chain function=&quot;GetIMDBRatingsById&quot;&gt;$$11&lt;/chain&gt;" dest="7">
+					<expression>(.+)</expression>
+				</RegExp>
 				<expression>TMDb</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBStudioByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
